# wbd-roku-psdk-log-Instrumentation

./: .gitignore  PACKAGE_USAGE.md  README.md  pyproject.toml  requirements.txt
.temp/: .gitignore
config/: README.md  monitor_config.json
docs/: 0_RUNNING.md  1_QUICKSTART.md  2_SETUP.md  3_TELNET_USAGE.md  4_VIEWING_LOGS.md  5_PSDK_MONITOR.md  README.md
examples/: README.md  capture_example.py
scripts/: connect_telnet.sh  monitor_psdk_events.sh
src/roku_psdk_log_instrument/: __init__.py  cli.py
src/roku_psdk_log_instrument/config/: monitor_config.json
src/roku_psdk_log_instrument/instrumentation/: __init__.py  instrumenter.py
src/roku_psdk_log_instrument/models/: __init__.py  log_entry.py
src/roku_psdk_log_instrument/parsers/: __init__.py  log_parser.py
src/roku_psdk_log_instrument/scripts/: monitor_psdk_events.sh
src/roku_psdk_log_instrument/telnet/: __init__.py  client.py  session_manager.py
src/roku_psdk_log_instrument/validation/: __init__.py  validator.py
tests/: __init__.py  test_instrumentation.py  test_parsers.py  test_telnet.py  test_validation.py
